fixed layout problem

--- a/src/components/press/Press.scss
+++ b/src/components/press/Press.scss
@@ -7,9 +7,13 @@
   align-items: center;
   transition: transform 0.5s;
   border-radius: 7px;
-  margin-bottom: 10px;
+  margin-top: 50px;
+  margin-bottom: 30px;
   position: relative;
 
+  &:last-child {
+    margin-bottom: 75px;
+  }
   &-image {
     width: 100%;
     height: 160px;
